# steam-trade-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  logging.yaml  pyproject.toml  test.env
.github/ workflows/: ci.yml
.github/workflows/: ci.yml
etc/: copy_to_raw.sql
frontend/: package-lock.json  package.json
frontend/src/: App.js  Routes.js  api.js  index.css  index.js  leftSideBarMenu.js
frontend/src/components/: AnalyzeItem.js  LeftBar.js  LeftBar2.js
frontend/src/routes/: app_market_items.js  apps.js  entire_market_stats.js  formats.js  market_item.js  root.js
notebooks/: Analyze Steam market.ipynb  ETL market_item.ipynb  ETL raw_stg_dwh.ipynb  Export to parquet direct.ipynb  Export to parquet.ipynb  Knife resell.ipynb  Untitled.ipynb
steam_trade_bot/: __init__.py  api_server.py  bot.py  consts.py  containers.py  database.py  db.py  import_proxies.py  recreate_db.py  settings.py  steam_abuse.py  type.py
steam_trade_bot/api/models/: market_item.py
steam_trade_bot/api/routes/: __init__.py  entire_market.py  game.py  market_item.py
steam_trade_bot/domain/: exceptions.py  fee_calculator.py  steam_fee.py
steam_trade_bot/domain/entities/: game.py  market.py  proxy.py
steam_trade_bot/domain/interfaces/: proxy.py  repositories.py  session.py  unit_of_work.py
steam_trade_bot/domain/services/: export_yaml.py  market_item_importer.py  orders_parser.py  sell_history_analyzer.py  ste_export.py
steam_trade_bot/etl/: async_run.py  models.py  settings.py  spark_conf.py
steam_trade_bot/etl/jobs/: game_market_item_job.py
steam_trade_bot/etl/jobs/entire_market_stats/: entire_market_stats.py
steam_trade_bot/etl/jobs/game_market_item/: game.py  game_market_item_job.py  market_item.py
steam_trade_bot/etl/processors/: game.py  market_item.py
steam_trade_bot/infrastructure/: db_engine.py  proxy.py  repositories.py  session.py  unit_of_work.py
steam_trade_bot/infrastructure/models/: __init__.py  common.py  dwh_market.py  market.py  proxy.py  raw_market.py  stg_market.py
steam_trade_bot/scripts/: README.md  raw_to_dwh.py  raw_to_stg.py  recreate_db.py  run_job.cmd  stg_to_dwh.py
tests/unit/domain/: test_fee_calculator.py
tests/unit/domain/services/: test_market_importer.py
tests/unit/domain/services/data/: orders_histogram.json
