[tool.poetry]
name = "steam_trade_bot"
version = "0.1.0"
description = ""
authors = ["Viktor Kozlov <soniclev@mail.ru>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "inconsistent-return-statements",
    "no-else-return",
    "broad-except",
    "logging-fstring-interpolation",
]

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 100

[tool.pylint.similarities]
# Maximum number of characters on a single line.
ignore-imports = "yes"

[tool.pylint.basic]
# Maximum number of characters on a single line.
good-names = [
    "f", "s", "d", "i", "j", "k"
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
allow_redefinition = true
warn_return_any = false
warn_unused_configs = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
env_files = ["test.env"]

[tool.coverage.run]
omit = [
    "*tests*",
    "*/__init__.py",
]


[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.41.0"
marshmallow-dataclass = "^8.5.11"
marshmallow = "^3.19.0"
marshmallow-enum = "^1.5.1"
dataclasses-json = "^0.5.7"
aioredis = "^2.0.1"
aioredis-lock = "^0.1.0"
aiohttp = "^3.8.1"
aiohttp-socks = "^0.7.1"
fake-headers = "^1.0.2"
PySocks = "^1.7.1"
json-logging = "^1.3.0"
SQLAlchemy = "^1.4.46"
asyncpg = "^0.27.0"
pydantic = "^1.10.4"
PyYAML = "^6.0"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
statsmodels = "^0.13.5"

[tool.poetry.dev-dependencies]
aioresponses = "^0.7.4"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
coverage = "^7.1.0"
pylint = "^2.16.1"
fakeredis = "^2.5.0"
freezegun = "^1.2.1"
mypy = "^1.0"
types-PyYAML = "^6.0.12"
python-dotenv = "^0.21.1"
pytest-dotenv = "^0.5.2"
black = "^23.1.0"
notebook = "^6.5.2"
pandas = "^1.5.2"
fastparquet = "^2023.1.0"
pyspark = {version = "^3.3.1", extras = ["sql", "pandas_on_spark"]}
plotly = "^5.11.0"
boto3 = "^1.26.69"
aiofiles = "^22.1.0"
